--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app">
-     xblog
+      <h3>xblog</h3>
     </div>
     <!-- built files will be auto injected -->
   </body>
