--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app">
-      <h3>xblog</h3>
+      <h3>韩蕊阳是个hape</h3>
     </div>
     <!-- built files will be auto injected -->
   </body>
