--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>嘿嘿</title>
+    <title>blog</title>
     <style type="text/css">
 .main{
   color: #666;margin-top: 50px;
@@ -44,7 +44,7 @@
   </head>
   <body>
     <div id="main">
-      <span class="blink">韩蕊阳是个hape</span>
+      <span class="blink">MyBlog</span>
     </div>
     <!-- built files will be auto injected -->
   </body>
