--- a/index.html
+++ b/index.html
@@ -47,5 +47,10 @@
       <span class="blink">fakir</span>
     </div>
     <!-- built files will be auto injected -->
+    
+    		 	<div style="width:300px;margin:0 auto; padding:20px 0;">
+		 		<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=42060602000325" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="https://github.com/xfakir/xfakir.github.io/blob/master/beian.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">鄂公网安备 42060602000325号</p></a>
+		 	</div>
+		 
   </body>
 </html>
